plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.jetbrains.kotlin.android)
    id 'kotlin-kapt'
}

android {
    namespace 'com.davidgrath.expensetracker'
    compileSdk 34

    defaultConfig {
        applicationId "com.davidgrath.expensetracker"
        minSdk 21
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "com.davidgrath.expensetracker.ExpenseTrackerTestRunner"
        vectorDrawables {
            useSupportLibrary true
        }

        kapt {
            arguments {
                arg("room.schemaLocation", "$projectDir/schemas")
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
//        compose true
        viewBinding true
    }
//    composeOptions {
//        kotlinCompilerExtensionVersion '1.5.1'
//    }
    packaging {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
            // https://github.com/robolectric/robolectric/issues/7456#issue-1312396867
            all {
                jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.io=ALL-UNNAMED"
            }
        }
    }
    sourceSets {
        getByName("androidTest").assets.srcDir("$projectDir/schemas")
    }
}
dependencies {

    //Basic Android
    def activity_version = "1.8.2"
    implementation libs.androidx.core.ktx
    implementation libs.androidx.lifecycle.runtime.ktx
    implementation "androidx.activity:activity:$activity_version"
    implementation "androidx.activity:activity-ktx:$activity_version"
    implementation "androidx.appcompat:appcompat:1.7.0" //This fixes Robolectric issues... somehow
//    implementation libs.androidx.activity.compose
//    implementation platform(libs.androidx.compose.bom)
//    implementation libs.androidx.ui
//    implementation libs.androidx.ui.graphics
//    implementation libs.androidx.ui.tooling.preview
//    implementation libs.androidx.material3



    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation("org.threeten:threetenbp:1.7.1")
    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
    implementation "androidx.viewpager2:viewpager2:1.1.0"
    def fragment_version = "1.8.8"

    implementation "androidx.fragment:fragment:$fragment_version"
    implementation "androidx.fragment:fragment-ktx:$fragment_version"

    debugImplementation "androidx.fragment:fragment-testing-manifest:$fragment_version"
    implementation("com.google.android.material:material:1.4.0")
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    implementation("com.github.bumptech.glide:glide:4.16.0")
    implementation("com.google.code.gson:gson:2.12.1")
    implementation("com.ibm.icu:icu4j:77.1")

    compileOnly 'cc.jilt:jilt:1.8.3'
    annotationProcessor 'cc.jilt:jilt:1.8.3'
    implementation "systems.uom:systems-quantity:2.1"
    implementation("systems.uom:systems-unicode:2.2")
    implementation 'tech.units:indriya:2.0.4'

    //Room
    def room_version = "2.6.1"
    implementation "androidx.room:room-runtime:$room_version"
    kapt "androidx.room:room-compiler:$room_version"
    implementation "androidx.room:room-rxjava3:$room_version"
    testImplementation "androidx.room:room-testing:$room_version"
    androidTestImplementation "androidx.room:room-testing:$room_version"
    //RxJava
    implementation("io.reactivex.rxjava3:rxjava:3.1.11")
    implementation("io.reactivex.rxjava3:rxandroid:3.0.2")
    testImplementation 'com.squareup.rx.idler:rx3-idler:0.11.0'
    androidTestImplementation 'com.squareup.rx.idler:rx3-idler:0.11.0'
    //Dagger
    implementation("com.google.dagger:dagger:2.15")
    kapt 'com.google.dagger:dagger-compiler:2.15'
    kaptTest 'com.google.dagger:dagger-compiler:2.15'
    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.15'

    def lifecycle_version = "2.9.2"
    def arch_version = "2.2.0"
    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"

    //Logging
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'com.github.tony19:logback-android:3.0.0'
    testImplementation 'ch.qos.logback:logback-classic:1.5.18'

    //Basic Tests
    testImplementation libs.junit
    testImplementation("androidx.test.espresso:espresso-contrib:3.6.1")
    testImplementation("androidx.test.espresso:espresso-intents:3.6.1")
    testImplementation(project(":sharedTest"))
    androidTestImplementation("androidx.test.espresso:espresso-contrib:3.6.1")
    androidTestImplementation("androidx.test.espresso:espresso-intents:3.6.1")
    androidTestImplementation "androidx.fragment:fragment-testing:$fragment_version"
    androidTestImplementation(project(":sharedTest"))
    testImplementation libs.androidx.junit
    testImplementation libs.androidx.espresso.core
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.3.0"
    testImplementation "androidx.arch.core:core-testing:2.2.0"
//    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.3.0"

    //Robolectric
    testImplementation("org.robolectric:robolectric:4.14.1")
    //Mockito
    testImplementation("org.mockito:mockito-android:4.11.0")
    testImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0")
    androidTestImplementation("org.mockito:mockito-android:4.11.0")
    androidTestImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0")

//    androidTestImplementation platform(libs.androidx.compose.bom)
//    androidTestImplementation libs.androidx.ui.test.junit4
//    debugImplementation libs.androidx.ui.tooling
//    debugImplementation libs.androidx.ui.test.manifest
    implementation("io.getstream:photoview:1.0.1") //I'm not using Kotlin 2 yet which the latest version of this library depends on. Do not upgrade
    implementation 'io.github.afreakyelf:Pdf-Viewer:2.1.1'
    implementation(project(":materialDrawables"))
}

configurations {
    testImplementation {
        exclude module: 'logback-android'
    }
}